--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                 </div>
             </div>
             <div class="wrapper user">
+                <button  class="btn" @click="hardReload">Обновить</button>
                 <div v-if="hasPhotos">
                   <div v-for="data_user in dataRead" :key="data_user.id" class="btn-column">
                     <p>{{ data_user.id }}</p>
@@ -122,7 +123,8 @@
                         if (!response.ok) {
                             throw new Error(`HTTP error! status: ${response.status}`);
                         }
-
+                            
+                        // window.location.reload();
                         console.log('Данные успешно сохранены');
                     } catch (error) {
                         console.error('Ошибка сохранения:', error);
@@ -166,6 +168,9 @@
                     } catch (error) {
                         console.error('Ошибка чтения:', error);
                     }
+                },
+                hardReload() {
+                     window.location.reload()
                 }
 
             }
