--- a/index.html
+++ b/index.html
@@ -92,12 +92,12 @@
 
           <!-- Форма редактирования -->
         <div class="modal">
-               <form class="card p-3"  v-if="selectedEditItem.data">
+               <form ref="FormUpdate"  class="card p-3"  v-if="selectedEditItem.data">
                    <h3 v-if="selectedEditItem.data">
                     Редактировать запись ID: {{ selectedEditItem.data.id }}
                   </h3>
                   <div class="form-group mb-3" v-if="selectedEditItem.data">
-                    <label class="form-label">Имя:{{ selectedEditItem.data.user }}</label>
+                    <label class="form-label">Имя:</label>
                     <input  type="text" v-model="selectedEditItem.data.user" name="name" class="form-control">
                   </div>  
                   <div class="form-group mb-3">
@@ -122,7 +122,7 @@
                         v-else-if="fieldTypes[key] === 'select'"
                         v-model="parsedProductFields[key]"
                         class="form-control"
-                      >
+                       >
 
                         <option v-for="option in options[key]" :value="option.value" :key="option.id">
                           {{ option.value }}
@@ -150,6 +150,7 @@
                     payment_methods: {},
                     product_fileds:[],
                     formData: {},
+                    FormUpdate:{},
                     full_data:{},
                     name: '',
                     selectedEditItem: {},
@@ -289,18 +290,37 @@
                      const data_edit_item = await response.json();
                      //console.log(data_edit_item);
                      this.selectedEditItem = data_edit_item;  
+                     console.log(this.selectedEditItem);
                     // Парсим product_fileds
                     if (this.selectedEditItem?.data?.product_fileds) {
                         this.parsedProductFields = JSON.parse(this.selectedEditItem.data.product_fileds);
+                        console.log(this.parsedProductFields);
                     }
                     
                 },
                 async updateItem(event) {
                     event.preventDefault();
 
-                    console.log('Измененные поля:', this.selectedEditItem);
-                    console.log(this.selectedEditItem.data.product_fileds);
-                    
+                    //console.log('Измененные поля:', this.selectedEditItem.data.product_fileds);
+                    const FormUpdate = new FormData(this.$refs.FormUpdate);
+                    this.FormUpdate = {}; 
+
+                    FormUpdate.forEach((value, key) => {
+                        this.FormUpdate[key] = value;
+                    });
+                    console.log(this.FormUpdate);
+                    if (this.FormUpdate.country) {
+                        this.product_fileds.country = this.FormUpdate.country;
+                    }
+                    if (this.FormUpdate.currency) {
+                        this.product_fileds.currency = this.FormUpdate.currency;
+                    }
+                    if (this.FormUpdate.messanger) {
+                        this.product_fileds.messanger = this.FormUpdate.messanger;
+                    }
+                    this.FormUpdate.parsedProductFields = { ...this.parsedProductFields };
+
+                    console.log('Данные формы:', this.FormUpdate);
 
                     try {
                         const response = await fetch('/function.php', {
@@ -309,9 +329,9 @@
                             body: JSON.stringify({
                                 action: 'update',
                                 id: this.selectedEditItem.data.id,
-                                name:this.selectedEditItem.data.user,
-                                providers:this.selectedEditItem.data.providers,
-                                full_data: this.selectedEditItem.data.product_fileds
+                                name:this.FormUpdate.name,
+                                providers:this.FormUpdate.payment_method,
+                                full_data: this.FormUpdate.parsedProductFields
                             })
                         });
 
